tests/ui/half-open-range-patterns/slice_pattern_syntax_problem0.stderr
error[E0527]: pattern requires 2 elements but array has 8
  --> $DIR/slice_pattern_syntax_problem0.rs:10:9
   |
LL |     let [first_three @ ..3, rest @ 2..] = xs;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected 8 elements

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0527`.
